[package]
name = "lively-swc-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
swc_core = { version = "47.0.3", features = [
    "ecma_plugin_transform",
    "ecma_visit",
    "ecma_utils",
    "ecma_ast",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = 3

# For WASI target
[target.wasm32-wasi]
runner = "wasmtime"
