[package]
name = "lively-swc-transforms"
version = "0.1.0"
edition = "2021"

[dependencies]
swc_ecma_ast = "=5.0.1"
swc_ecma_visit = "=5.0.0"
swc_common = { version = "=5.0.1", features = ["sourcemap"] }
swc_ecma_parser = "=6.0.2"
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
swc_ecma_codegen = "=5.0.1"
